la je met un peu de beua sur ma page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <head>
 </head>
 <body>
-	Hello world !
+    <div align="center">
+		<img src="images/seysoo.jpg" alt="Seysoo"/>
+		<h1>Formation GIT<h1>
+		<p> Très utile</p>
+    </div>
 </body>
 </html>
