modification du style de la page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<link rel="stylesheet" src="style/style.css" />
 </head>
 <body>
-    <div align="center">
+    <div id="main">
 		<img src="images/seysoo.jpg" alt="Seysoo"/>
 		<h1>Formation GIT<h1>
 		<p> Très utile</p>
