changement des caractere accentes

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<link rel="stylesheet" src="style/style.css" />
 </head>
 <body>
-    <div id="main">
+    <div id="main" align="center">
 		<img src="images/seysoo.jpg" alt="Seysoo"/>
 		<h1>Formation GIT<h1>
-		<p> Très utile</p>
+		<p> Tr&egrave;s utile</p>
     </div>
 </body>
 </html>
