--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 		<h1>Formation GIT<h1>
 		<p> Tr&egrave;s utile</p>
     </div>
-		<a href="https://github.com/abderahmane/abderahmane.github.io"> Abderahmane</p>
+		<a href="https://github.com/abderahmane"> Abderahmane</p>
 </body>
 </html>
